--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "s-assignment",
+  "homepage": "https://gppandey123.github.io/s-assignment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,10 +15,13 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+   
   },
   "eslintConfig": {
     "extends": [
